// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDataGrid rendering renders additional toolbar controls 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    class="euiDataGrid__focusWrap emotion-euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2 emotion-euiDataGrid-cellPadding-m-fontSize-m-borders-all-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls emotion-euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls emotion-euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <button
              class="euiButtonEmpty euiDataGridToolbarControl emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text-interactiveStyles"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  color="inherit"
                  data-euiicon-type="tableDensityNormal"
                />
                <span
                  class="euiDataGridToolbarControl__text eui-textTruncate"
                >
                  Columns
                </span>
                <span
                  aria-label="- Active: 2"
                  class="euiNotificationBadge euiDataGridToolbarControl__badge emotion-euiNotificationBadge-s-subdued-badgeStyles"
                  role="marquee"
                >
                  2
                </span>
              </span>
            </button>
          </div>
          <button>
            Button
          </button>
        </div>
        <div
          class="euiDataGrid__rightControls emotion-euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Keyboard shortcuts"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridKeyboardShortcutsButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="keyboard"
                />
              </button>
            </span>
          </div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Display options"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridDisplaySelectorButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="controls"
                />
              </button>
            </span>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              aria-pressed="false"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content emotion-euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
        <div
          class="euiDataGrid__virtualized emotion-euiDataGridBody-virtualized"
          style="position: relative; height: 9007199254740991px; width: 9007199254740991px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 202px; width: 200px;"
          >
            <div
              class="euiDataGridHeader emotion-euiDataGridHeader-shade"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="A"
                >
                  A
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-A"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer-isLastColumn"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="B"
                >
                  B
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-B"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="newline"
                >
                  ↵
                </span>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiDataGrid rendering renders control columns 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    class="euiDataGrid__focusWrap emotion-euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2 emotion-euiDataGrid-cellPadding-m-fontSize-m-borders-all-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls emotion-euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls emotion-euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <button
              class="euiButtonEmpty euiDataGridToolbarControl emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text-interactiveStyles"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  color="inherit"
                  data-euiicon-type="tableDensityNormal"
                />
                <span
                  class="euiDataGridToolbarControl__text eui-textTruncate"
                >
                  Columns
                </span>
                <span
                  aria-label="- Active: 2"
                  class="euiNotificationBadge euiDataGridToolbarControl__badge emotion-euiNotificationBadge-s-subdued-badgeStyles"
                  role="marquee"
                >
                  2
                </span>
              </span>
            </button>
          </div>
          <button>
            Button
          </button>
        </div>
        <div
          class="euiDataGrid__rightControls emotion-euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Keyboard shortcuts"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridKeyboardShortcutsButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="keyboard"
                />
              </button>
            </span>
          </div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Display options"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridDisplaySelectorButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="controls"
                />
              </button>
            </span>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              aria-pressed="false"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content emotion-euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
        <div
          class="euiDataGrid__virtualized emotion-euiDataGridBody-virtualized"
          style="position: relative; height: 9007199254740991px; width: 9007199254740991px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 202px; width: 300px;"
          >
            <div
              class="euiDataGridHeader emotion-euiDataGridHeader-shade"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn leadingControlCol emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="leading"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-leading"
                role="columnheader"
                style="width: 50px;"
                tabindex="-1"
              >
                <span>
                  leading heading
                </span>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="A"
                >
                  A
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-A"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="2"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="B"
                >
                  B
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-B"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn trailingControlCol emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="trailing"
                data-gridcell-column-index="3"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-trailing"
                role="columnheader"
                style="width: 50px;"
                tabindex="-1"
              >
                <span>
                  trailing heading
                </span>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="newline"
                >
                  ↵
                </span>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                0
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 50px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 150px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 250px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                0
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 50px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 150px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 250px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 50px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 150px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 250px; top: 0px; height: 34px; width: 50px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight emotion-euiDataGridRowCell__content-controlColumn-autoHeight"
                data-datagrid-cellcontent="true"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiDataGrid rendering renders custom column headers 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    class="euiDataGrid__focusWrap emotion-euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2 emotion-euiDataGrid-cellPadding-m-fontSize-m-borders-all-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls emotion-euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls emotion-euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <button
              class="euiButtonEmpty euiDataGridToolbarControl emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text-interactiveStyles"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  color="inherit"
                  data-euiicon-type="tableDensityNormal"
                />
                <span
                  class="euiDataGridToolbarControl__text eui-textTruncate"
                >
                  Columns
                </span>
                <span
                  aria-label="- Active: 2"
                  class="euiNotificationBadge euiDataGridToolbarControl__badge emotion-euiNotificationBadge-s-subdued-badgeStyles"
                  role="marquee"
                >
                  2
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiDataGrid__rightControls emotion-euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Keyboard shortcuts"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridKeyboardShortcutsButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="keyboard"
                />
              </button>
            </span>
          </div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Display options"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridDisplaySelectorButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="controls"
                />
              </button>
            </span>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              aria-pressed="false"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content emotion-euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
        <div
          class="euiDataGrid__virtualized emotion-euiDataGridBody-virtualized"
          style="position: relative; height: 9007199254740991px; width: 9007199254740991px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 202px; width: 200px;"
          >
            <div
              class="euiDataGridHeader emotion-euiDataGridHeader-shade"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="A"
                >
                  Column A
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-A"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer-isLastColumn"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="B"
                >
                  <div>
                    More Elements
                  </div>
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-B"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="newline"
                >
                  ↵
                </span>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiDataGrid rendering renders with common and div attributes 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    class="euiDataGrid__focusWrap emotion-euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2 emotion-euiDataGrid-cellPadding-m-fontSize-m-borders-all-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls emotion-euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls emotion-euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <button
              class="euiButtonEmpty euiDataGridToolbarControl emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text-interactiveStyles"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  color="inherit"
                  data-euiicon-type="tableDensityNormal"
                />
                <span
                  class="euiDataGridToolbarControl__text eui-textTruncate"
                >
                  Columns
                </span>
                <span
                  aria-label="- Active: 2"
                  class="euiNotificationBadge euiDataGridToolbarControl__badge emotion-euiNotificationBadge-s-subdued-badgeStyles"
                  role="marquee"
                >
                  2
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiDataGrid__rightControls emotion-euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Keyboard shortcuts"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridKeyboardShortcutsButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="keyboard"
                />
              </button>
            </span>
          </div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                aria-label="Display options"
                class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
                data-test-subj="dataGridDisplaySelectorButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="controls"
                />
              </button>
            </span>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              aria-pressed="false"
              class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content emotion-euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
        <div
          class="euiDataGrid__virtualized emotion-euiDataGridBody-virtualized"
          style="position: relative; height: 9007199254740991px; width: 9007199254740991px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 202px; width: 200px;"
          >
            <div
              class="euiDataGridHeader emotion-euiDataGridHeader-shade"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="A"
                >
                  A
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-A"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="tab"
                >
                  ↦
                </span>
              </div>
              <div
                aria-describedby="euiDataGridCellHeader_generated-id_sorting"
                class="euiDataGridHeaderCell euiDataGridHeaderCell--hasColumnActions emotion-euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width: 100px;"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer emotion-euiDataGridColumnResizer-isLastColumn"
                  data-test-subj="dataGridColumnResizer"
                />
                <div
                  class="euiDataGridHeaderCell__content emotion-euiDataGridHeaderCell__content"
                  title="B"
                >
                  B
                </div>
                <div
                  class="euiPopover emotion-euiPopover-block-euiDataGridHeaderCell__popover"
                >
                  <button
                    aria-label="Press the Enter key to view this column's actions"
                    class="euiButtonIcon euiDataGridHeaderCell__button emotion-euiButtonIcon-xs-empty-text-euiDataGridHeaderCell__actions"
                    data-euigrid-tab-managed="true"
                    data-test-subj="dataGridHeaderCellActionButton-B"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="boxesVertical"
                    />
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="euiScreenReaderOnly"
                  data-tabular-copy-marker="newline"
                >
                  ↵
                </span>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                0, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                1, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 0px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, A
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="tab"
              >
                ↦
              </span>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn emotion-euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position: absolute; left: 100px; top: 0px; height: 34px; width: 100px;"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__content euiDataGridRowCell__content--defaultHeight eui-textTruncate emotion-euiDataGridRowCell__content-defaultHeight"
                data-datagrid-cellcontent="true"
              >
                2, B
              </div>
              <span
                aria-hidden="true"
                class="euiScreenReaderOnly"
                data-tabular-copy-marker="newline"
              >
                ↵
              </span>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="euiScreenReaderOnly"
          data-tabular-copy-marker="boundary"
        >
          𐘂𐘂
        </span>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;
